# dns-email-toolkit

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  gh-pages.yml  release.yml
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
docs/det/: all.html  enum.Commands.html  fn.main.html  index.html  sidebar-items.js  struct.Cli.html
docs/det/common/: index.html  sidebar-items.js
docs/det/common/cli/: index.html  sidebar-items.js  trait.CliCommand.html
docs/det/common/presenter/: index.html  sidebar-items.js  trait.Presenter.html
docs/det/dns/: index.html  sidebar-items.js
docs/det/dns/core/: index.html  sidebar-items.js
docs/det/dns/domain/: index.html  sidebar-items.js  struct.ARecord.html  struct.MxRecord.html  struct.TxtRecord.html
docs/det/dns/infrastructure/: index.html
docs/det/spf/: index.html
docs/det/spf/core/: index.html  sidebar-items.js
docs/src/det/: main.rs.html
scripts/: build-docs.sh  install.sh
src/: main.rs
src/common/: cli.rs  mod.rs  presenter.rs
src/dns/: mod.rs
src/dns/core/: dns_resolver.rs
src/dns/domain/: mod.rs  record.rs
src/dns/infrastructure/: dns_resolver.rs
src/spf/: mod.rs
src/spf/core/: mod.rs
src/spf/domain/: directive.rs  error.rs  mechanism.rs  mod.rs  model.rs  modifier.rs  qualifier.rs  term.rs  version.rs
src/spf/infrastructure/: cli.rs  dns_resolver_gateway.rs  gateway.rs  mod.rs
src/spf/use_case/: mod.rs  summary_spf.rs  summary_spf_gateway.rs  summary_spf_impl.rs  summary_spf_terminal_presenter.rs
(+155 files in other folders)
