[package]
name = "det"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.72"
clap = { version = "4.3.19", features = ["derive"] }
domain = { version = "0.8.0", features = ["resolv", "resolv-sync"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
